@@ -1,3 +1,10 @@
+Travel::Status::DE::IRIS 1.50 - Thu Oct 15 2020
+
+    * Add station Brunnen(Oberbay)
+    * Incorporate station name and eva number changes from DB IRIS
+      (affects nine stations)
+    * Add geocoordinates to 17 stations previously lacking those
+
 Travel::Status::DE::IRIS 1.49 - Sat Oct 03 2020
 
     * Add station Jaderberg
